Fix: Katex overflowing content will now wrap

--- a/assets/scss/common/_global.scss
+++ b/assets/scss/common/_global.scss
@@ -357,6 +357,9 @@ body {
   .katex-html > .newline {
       margin-top: 1rem;
   }
+  .katex-html {
+    overflow: scroll hidden;
+  }
 }
 
 .card-bar {
